{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 97,
  "lineage": "b12cbc90-7fc8-0a0c-e8ae-3fd19e5b69b5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859066267568:security-group/sg-0bc090e1a054440a7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc090e1a054440a7",
            "ingress": [],
            "name": "terraform-20231226185222556500000006",
            "name_prefix": "terraform-",
            "owner_id": "859066267568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-071a3c807796cfe2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859066267568:internet-gateway/igw-05ed88f44271af30f",
            "id": "igw-05ed88f44271af30f",
            "owner_id": "859066267568",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-071a3c807796cfe2f"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859066267568:route-table/rtb-044bd5103a10537b8",
            "id": "rtb-044bd5103a10537b8",
            "owner_id": "859066267568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ed88f44271af30f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-071a3c807796cfe2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032ec587e7d2cd9f0",
            "route_table_id": "rtb-044bd5103a10537b8",
            "subnet_id": "subnet-0322245d8c5e0c695"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b111a83fa3c2203",
            "route_table_id": "rtb-044bd5103a10537b8",
            "subnet_id": "subnet-041cf2c96c1dd4298"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859066267568:subnet/subnet-0322245d8c5e0c695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0322245d8c5e0c695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859066267568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-071a3c807796cfe2f"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859066267568:subnet/subnet-041cf2c96c1dd4298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041cf2c96c1dd4298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859066267568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-071a3c807796cfe2f"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859066267568:vpc/vpc-071a3c807796cfe2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0557843a8ee157ee7",
            "default_route_table_id": "rtb-03308f4ec0885f7b4",
            "default_security_group_id": "sg-069caef61a922bd68",
            "dhcp_options_id": "dopt-0d2187c557ebc6ef4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071a3c807796cfe2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03308f4ec0885f7b4",
            "owner_id": "859066267568",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}